--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bet+</a>
-      <a class="pull-right navbar-brand" href="#">Sign Up</a>
-       <a class="pull-right navbar-brand" href="#">Login</a>
+      <a class="navbar-brand navbar-center" href="#">Bet+</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
         <li><a href="#">Mon compte<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Historique des paris</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a class="navbar-brand" href="#">Login</a></li>
+        <li><a class="navbar-brand" href="#">Sign Up</a></li>
       </ul>
     </div>
   </div>
@@ -44,7 +46,7 @@
 </ul>
 <div id="myTabContent" class="tab-content">
   <div class="tab-pane fade active in" id="home">
-  
+
     <div class="card">
     <div class="card-block">
       <h4 class="card-title">Turquie - Finlande</h4>
@@ -55,28 +57,39 @@
       <span>N</span><button type="button" class="btn btn-primary btn-sm">2.10</button>
       <span>2</span><button type="button" class="btn btn-default btn-sm">4.30</button>
   -->
-  
+
   <div class="row text-center">
-    <div class="col-xs-4">
-      <span>1 </span><button type="button" class="btn btn-default btn-sm">1.50</button>
+    <div class="col-xs-2">
+      <br>
+      <p>3H</p>
+    </div>
+    <div class="col-xs-2">
+      <span>1</span>
+      <br>
+      <button type="button" class="btn btn-default btn-sm">1.50</button>
+    </div>
+    <div class="col-xs-2">
+       <span>N</span>
+       <br>
+       <button type="button" class="btn btn-default btn-sm">2.4</button>
+    </div>
+    <div class="col-xs-2">
+       <span>2</span>
+       <br>
+       <button type="button" class="btn btn-default btn-sm">5.17</button>
     </div>
     <div class="col-xs-4">
-       <span>N </span><button type="button" class="btn btn-default btn-sm">2.4</button>
-    </div>
-    <div class="col-xs-4">
-       <span>2 </span><button type="button" class="btn btn-default btn-sm">5.17</button>
+      <br>
+      <a href="#" class="card-link">détails</a>
     </div>
   </div>
-      </p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
     </div>
-  </div>  
-    
+  </div>
+
 
   </div>
   <div class="tab-pane fade" id="profile">
-  
+
   </div>
     <div class="tab-pane fade" id="profile">
     <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
