restructuration html, injection de partials via JS

--- a/index.html
+++ b/index.html
@@ -1,39 +1,9 @@
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8">
-  <title>Titre de la page</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/app.css">
-</head>
+<!DOCTYPE html>
+<html>
+<div id="header"></div>
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="pull-left navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand navbar-center" href="#">Bet+</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Mon compte<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Historique des paris</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a class="navbar-brand" href="#">Login</a></li>
-        <li><a class="navbar-brand" href="#">Sign Up</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
+<div id="navbar"></div>
 <div class="container">
 <!--
 <div class='error' style='display:none'>I did something!</div>
@@ -104,9 +74,17 @@
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+
+<!-- chargement des partials -->
+<script>
+  $(function(){
+    $("#header").load("header.html");
+    $("#navbar").load("navbar.html");
+  });
+</script>
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 <script type="text/javascript" src="js/script.js"></script>
 
 </body>
