modifie la navbar et ajoute la navbar pour simuler la connexion de l'utilisateur

--- a/navbar_session.html
+++ b/navbar_session.html
@@ -12,8 +12,10 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
+        <li><a href="#">Mon compte<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Consulter Panier</a></li>
-        <li><a href="#">Promotions<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Promotions</a></li>
+        <li><a href="#">Historique des paris</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Charte</a></li>
