ajoute le dropdown

--- a/navbar.html
+++ b/navbar.html
@@ -11,16 +11,19 @@
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Consulter Panier</a></li>
-        <li><a href="#">Promotions<span class="sr-only">(current)</span></a></li>
-      </ul>
+      <div class="nav navbar-nav dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Menu
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Consulter Panier</a></li>
+          <li><a href="#">Promotions</a></li>
+          <li><a href="#">Charte</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Conditions Générales</a></li>
+          <li><a href="#">A propos</a></li>
+        </ul>
+      </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Charte</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">A propos</a></li>
-        <li><a href="#">Conditions Générales</a></li>
-        <li><a href="#">                 </a></li>
         <li><a class="navbar-brand" href="#">Login</a></li>
         <li><a class="navbar-brand" href="signup.html">Sign Up</a></li>
       </ul>
