--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <script>
   $(function(){
     $("#header").load("header.html");
-    $("#navbar").load("navbar.html");
+    $("#navbar").load("navbar_session.html");
   });
 </script>
 
