Details all view

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="col-xs-4">
       <br>
-      <a href="#" class="card-link">détails</a>
+      <a href="details.html" class="card-link">details</a>
     </div>
   </div>
     </div>
