Ajout de l'inscription et l'authentification

--- a/header.html
+++ b/header.html
@@ -1,7 +1,8 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>BET+</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap_theme.min.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
