--- a/signin.html
+++ b/signin.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <div id="header"></div>
 <body>
@@ -9,23 +9,7 @@
 
 <form>
 <fieldset>
-    <legend>Inscription</legend>
-
-  <div class="form-group">
-    <label for="nom" class="control-label">Nom</label>
-      <input type="text" class="form-control" id="nom" placeholder="Nom">
-  </div>
-
-  <div class="form-group">
-    <label for="prenom" class="control-label">Prénom</label>
-      <input type="text" class="form-control" id="prenom" placeholder="Prénom">
-  </div>
-
-  <div class="form-group">
-    <label for="date_naissance" class="control-label">Date de naissance</label>
-      <input type="date" class="form-control" id="date_naissance" placeholder="JJ/MM/AAAA">
-  </div>
-
+    <legend>Connexion</legend>
 
   <div class="form-group">
     <label for="inputEmail3" class="control-label">Email</label>
@@ -39,11 +23,6 @@
   </div>
 
 
-  <div class="form-group">
-    <label for="confirmationpass" class="control-label">Confirmation mot de passe</label>
-      <input type="password" class="form-control" id="confirmationpass" placeholder="Confirmation Mot de passe">
-  </div>
-
 
   <div class="form-group">
     <div class="col-xs-offset-4">
@@ -53,10 +32,6 @@
 </form>
 
 </div>
-
-
-<div class='error' style='display:none'>I did something!</div>
-<button>Do something!</button>
 
 
 
