--- a/navbar.html
+++ b/navbar.html
@@ -7,17 +7,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand navbar-center" href="index.html">Bet+</a>
+      <a class="navbar-brand" href="#">Bet+</a>
+      <a class="pull-right navbar-brand" href="#">Sign Up</a>
+       <a class="pull-right navbar-brand" href="#">Login</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
         <li><a href="#">Mon compte<span class="sr-only">(current)</span></a></li>
         <li><a href="#">Historique des paris</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a class="navbar-brand" href="#">Login</a></li>
-        <li><a class="navbar-brand" href="signup.html">Sign Up</a></li>
       </ul>
     </div>
   </div>
