ajout du carrousel et corrections

--- a/details.html
+++ b/details.html
@@ -4,11 +4,12 @@
 <body>
 
 <div id="navbar"></div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel"></div>
 <div class="container">
 
   <ul class="nav nav-tabs">
     <li class="active"><a href="#" href="details.html">Details</a></li>
-    <li><a href="#" href="details_paries.html">Tous les paries</a></li>
+    <li><a href="#" href="details_paries.html">Tous les Paris</a></li>
     <li><a href="#" href="details_equipe.html">Equipes</a></li>
     <li><a href="#" href="details_but.html">But</a></li>
     <li><a href="#" href="details_score.html">Score</a></li>
@@ -98,6 +99,7 @@
   $(function(){
     $("#header").load("header.html");
     $("#navbar").load("navbar.html");
+    $("#myCarousel").load("carrousel.html");
   });
 </script>
 
