--- a/details_but.html
+++ b/details_but.html
@@ -7,8 +7,8 @@
 <div class="container">
 
   <ul class="nav nav-tabs">
-    <li><a href="details.html">Details</a></li>
-    <li><a href="details_paries.html">Tous les paries</a></li>
+    <li><a href="details.html">Détails</a></li>
+    <li><a href="details_paries.html">Tous les Paris</a></li>
     <li><a href="details_equipe.html">Equipes</a></li>
     <li class="active"><a href="details_but.html">But</a></li>
     <li><a href="details_score.html">Score</a></li>
@@ -60,6 +60,7 @@
   $(function(){
     $("#header").load("header.html");
     $("#navbar").load("navbar.html");
+    $("#myCarousel").load("carrousel.html");
   });
 </script>
 
