--- a/details_paries.html
+++ b/details_paries.html
@@ -7,8 +7,8 @@
 <div class="container">
 
   <ul class="nav nav-tabs">
-    <li><a href="details.html">Details</a></li>
-    <li class="active"><a href="details_paries.html">Tous les paries</a></li>
+    <li><a href="details.html">Détails</a></li>
+    <li class="active"><a href="details_paries.html">Tous les Paris</a></li>
     <li><a href="details_equipe.html">Equipes</a></li>
     <li><a href="details_but.html">But</a></li>
     <li><a href="details_score.html">Score</a></li>
@@ -18,7 +18,7 @@
 
     <div class="card">
       <div class="card-block">
-        <h4 class="card-title">PARIES</h4>
+        <h4 class="card-title">PARIS</h4>
         <h6 class="card-subtitle mb-2 text-muted glyphicon glyphicon-football-soccer">Football - Qualif. Europe CDM</h6>
         <p class="card-text">
 
@@ -65,6 +65,7 @@
   $(function(){
     $("#header").load("header.html");
     $("#navbar").load("navbar.html");
+    $("#myCarousel").load("carrousel.html");
   });
 </script>
 
