--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class='error' style='display:none'>I did something!</div>
 <button>Do something!</button>
 -->
-
+  <div id="myCarousel" class="carousel slide" data-ride="carousel"></div>
 <ul class="nav nav-tabs">
   <li class="active"><a href="#home" data-toggle="tab" aria-expanded="true">Matchs à venir</a></li>
   <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Meilleurs côtes</a></li>
@@ -83,6 +83,7 @@
   $(function(){
     $("#header").load("header.html");
     $("#navbar").load("navbar_session.html");
+    $("#myCarousel").load("carrousel.html");
   });
 </script>
 
