--- a/navbar.html
+++ b/navbar.html
@@ -7,9 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Bet+</a>
-      <a class="pull-right navbar-brand" href="#">Sign Up</a>
-       <a class="pull-right navbar-brand" href="#">Login</a>
+      <a class="navbar-brand" href="index.html">Bet+</a>
+      <a class="pull-right navbar-brand" href="signin.html">Sign Up</a>
+       <a class="pull-right navbar-brand" href="signup.html">Login</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
