--- a/details.html
+++ b/details.html
@@ -7,11 +7,11 @@
 <div class="container">
 
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#" href="details.html">Details</a></li>
-    <li><a href="#" href="details_paries.html">Tous les paries</a></li>
-    <li><a href="#" href="details_equipe.html">Equipes</a></li>
-    <li><a href="#" href="details_but.html">But</a></li>
-    <li><a href="#" href="details_score.html">Score</a></li>
+    <li class="active"><a href="details.html">Details</a></li>
+    <li><a  href="details_paries.html">Tous les paries</a></li>
+    <li><a  href="details_equipe.html">Equipes</a></li>
+    <li><a  href="details_but.html">Buteur</a></li>
+    <li><a  href="details_score.html">Score</a></li>
   </ul>
   <div class="tab-content container-paries">
     <div class="card">
@@ -97,7 +97,7 @@
 <script>
   $(function(){
     $("#header").load("header.html");
-    $("#navbar").load("navbar.html");
+    $("#navbar").load("navbar_session.html");
   });
 </script>
 
