--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="myTabContent" class="tab-content">
   <div class="tab-pane fade active in" id="home">
 
-    <div class="card">
+    <div class="card container-paries">
     <div class="card-block">
       <h4 class="card-title">Turquie - Finlande</h4>
       <h6 class="card-subtitle mb-2 text-muted glyphicon glyphicon-football-soccer">Football - Qualif. Europe CDM</h6>
