--- a/navbar.html
+++ b/navbar.html
@@ -31,7 +31,7 @@
         </ul>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a class="navbar-brand" href="#">Login</a></li>
+        <li><a class="navbar-brand" href="signin.html">Login</a></li>
         <li><a class="navbar-brand" href="signup.html">Sign Up</a></li>
 
       </ul>
