Fix Login / SignUp

--- a/navbar_session.html
+++ b/navbar_session.html
@@ -26,6 +26,8 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><a class="navbar-brand" href="#">Mon compte</a></li>
+        <li><a class="navbar-brand" href="signin.html">Login</a></li>
+        <li><a class="navbar-brand" href="signup.html">Sign Up</a></li>
       </ul>
     </div>
   </div>
