--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel"></div>
 <ul class="nav nav-tabs">
   <li class="active"><a href="#home" data-toggle="tab" aria-expanded="true">Matchs à venir</a></li>
-  <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Meilleurs côtes</a></li>
+  <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Meilleures côtes</a></li>
 </ul>
 <div id="myTabContent" class="tab-content">
   <div class="tab-pane fade active in" id="home">
@@ -50,7 +50,7 @@
     </div>
     <div class="col-xs-4">
       <br>
-      <a href="details.html" class="card-link">details</a>
+      <a href="details.html" class="card-link">détails</a>
     </div>
   </div>
     </div>
