ajout panier fin

--- a/details.html
+++ b/details.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <div id="header"></div>
 <body>
@@ -8,8 +8,8 @@
 <div class="container">
 
   <ul class="nav nav-tabs">
-    <li class="active"><a href="details.html">Details</a></li>
-    <li><a  href="details_paries.html">Tous les paries</a></li>
+    <li class="active"><a href="details.html">Détails</a></li>
+    <li><a  href="details_paries.html">Tous les paris</a></li>
     <li><a  href="details_equipe.html">Equipes</a></li>
     <li><a  href="details_but.html">Buteur</a></li>
     <li><a  href="details_score.html">Score</a></li>
@@ -27,7 +27,7 @@
             <p>3H</p>
           </div>
           </div>
-          <h4>Resultat</h4>
+          <h4>Résultat</h4>
           <div class="row">
             <div class="col-xs-2">
               <span>Turquie</span>
