--- a/details_but.html
+++ b/details_but.html
@@ -4,6 +4,7 @@
 <body>
 
 <div id="navbar"></div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel"></div>
 <div class="container">
 
   <ul class="nav nav-tabs">
