--- a/details_paries.html
+++ b/details_paries.html
@@ -4,11 +4,12 @@
 <body>
 
 <div id="navbar"></div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel"></div>
 <div class="container">
 
   <ul class="nav nav-tabs">
     <li><a href="details.html">Détails</a></li>
-    <li class="active"><a href="details_paries.html">Tous les Paris</a></li>
+    <li class="active"><a href="details_paries.html">Tous les paris</a></li>
     <li><a href="details_equipe.html">Equipes</a></li>
     <li><a href="details_but.html">Buteur</a></li>
     <li><a href="details_score.html">Score</a></li>
