--- a/details_score.html
+++ b/details_score.html
@@ -4,11 +4,12 @@
 <body>
 
 <div id="navbar"></div>
+<div id="myCarousel" class="carousel slide" data-ride="carousel"></div>
 <div class="container">
 
   <ul class="nav nav-tabs">
-    <li><a href="details.html">Details</a></li>
-    <li><a href="details_paries.html">Tous les paries</a></li>
+    <li><a href="details.html">Détails</a></li>
+    <li><a href="details_paries.html">Tous les paris</a></li>
     <li><a href="details_equipe.html">Equipes</a></li>
     <li><a href="details_but.html">Buteur</a></li>
     <li class="active"><a href="details_score.html">Score</a></li>
@@ -74,6 +75,7 @@
   $(function(){
     $("#header").load("header.html");
     $("#navbar").load("navbar_session.html");
+    $("#myCarousel").load("carrousel.html");
   });
 </script>
 
