--- a/navbar.html
+++ b/navbar.html
@@ -8,33 +8,31 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">Bet+</a>
-      <a class="pull-right navbar-brand" href="signin.html">Sign Up</a>
-       <a class="pull-right navbar-brand" href="signup.html">Login</a>
+        <a class="pull-right navbar-brand" href="signup.html">Sign Up</a>
+       <a class="pull-right navbar-brand" href="signin.html">Login</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      
       <ul class="nav navbar-nav">
-        <li><a href="#">Mon compte<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Historique des paris</a></li>
-
-      <div class="nav navbar-nav dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Menu
-        <span class="caret"></span></button>
+        <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Paris<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Consulter Panier</a></li>
+          <li><a href="panier.html">Consulter Panier</a></li>
           <li><a href="#">Promotions</a></li>
+          <li><a href="#">Historique des paris</a></li>
+        </ul>
+      </li>
+       <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Informations<span class="caret"></span></a>
+        <ul class="dropdown-menu">
           <li><a href="#">Charte</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Conditions Générales</a></li>
           <li><a href="#">A propos</a></li>
         </ul>
-      </div>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a class="navbar-brand" href="signin.html">Login</a></li>
-        <li><a class="navbar-brand" href="signup.html">Sign Up</a></li>
-
+      </li>
       </ul>
+
     </div>
   </div>
 </nav>
