ajout historique et modification accueil

--- a/navbar.html
+++ b/navbar.html
@@ -18,8 +18,8 @@
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Paris<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="panier.html">Consulter Panier</a></li>
+          <li><a href="historique.html">Historique des paris</a></li>
           <li><a href="#">Promotions</a></li>
-          <li><a href="#">Historique des paris</a></li>
         </ul>
       </li>
        <li class="dropdown">
