--- a/index.html
+++ b/index.html
@@ -15,63 +15,150 @@
 <button>Do something!</button>
 -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel"></div>
+
+
+
+  <br>
 <ul class="nav nav-tabs">
   <li class="active"><a href="#home" data-toggle="tab" aria-expanded="true">Matchs à venir</a></li>
   <li class=""><a href="#profile" data-toggle="tab" aria-expanded="false">Meilleures côtes</a></li>
 </ul>
+
+
 <div id="myTabContent" class="tab-content">
   <div class="tab-pane fade active in" id="home">
 
     <div class="card container-paries">
     <div class="card-block">
-      <h4 class="card-title">Turquie - Finlande</h4>
+      <h4 class="card-title"><span class="label label-info">7H</span> Turquie - Finlande</h4>
       <h6 class="card-subtitle mb-2 text-muted glyphicon glyphicon-football-soccer">Football - Qualif. Europe CDM</h6>
       <p class="card-text">
-        <!--
-      <span>1</span><button type="button" class="btn btn-default btn-sm">1.10</button>
-      <span>N</span><button type="button" class="btn btn-primary btn-sm">2.10</button>
-      <span>2</span><button type="button" class="btn btn-default btn-sm">4.30</button>
-  -->
 
   <div class="row text-center">
-    <div class="col-xs-2">
-      <br>
-      <p>3H</p>
-    </div>
-    <div class="col-xs-2">
+    <div class="col-xs-4">
       <span>1</span>
-      <br>
-      <button type="button" class="btn btn-default btn-sm">1.50</button>
-    </div>
-    <div class="col-xs-2">
-       <span>N</span>
-       <br>
-       <button type="button" class="btn btn-default btn-sm">2.4</button>
-    </div>
-    <div class="col-xs-2">
-       <span>2</span>
-       <br>
-       <button type="button" class="btn btn-default btn-sm">5.17</button>
+      <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
     </div>
     <div class="col-xs-4">
-      <br>
-      <a href="details.html" class="card-link">détails</a>
+       <span>N</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>2</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
     </div>
   </div>
     </div>
   </div>
 
+    <div class="card container-paries">
+    <div class="card-block">
+      <h4 class="card-title"><span class="label label-info">2J</span> France - Espagne</h4>
+      <h6 class="card-subtitle mb-2 text-muted glyphicon glyphicon-football-soccer">Football - Qualif. Europe CDM</h6>
+      <p class="card-text">
+
+  <div class="row text-center">
+    <div class="col-xs-4">
+      <span>1</span>
+      <button type="button" class="btn btn-default btn-sm"><strong>2.50</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>N</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>5.00</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>2</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>1.30</strong></button>
+    </div>
+  </div>
+    </div>
+  </div>
+
+      <div class="card container-paries">
+    <div class="card-block">
+      <h4 class="card-title"><span class="label label-info">7H</span> Egypte - Italie</h4>
+      <h6 class="card-subtitle mb-2 text-muted glyphicon glyphicon-football-soccer">Football - Qualif. Europe CDM</h6>
+      <p class="card-text">
+
+  <div class="row text-center">
+    <div class="col-xs-4">
+      <span>1</span>
+      <button type="button" class="btn btn-default btn-sm"><strong>4.50</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>N</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>6.50</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>2</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>1.20</strong></button>
+    </div>
+  </div>
+    </div>
+  </div>
 
   </div>
+
+
+ 
   <div class="tab-pane fade" id="profile">
+    
+      <div class="card container-paries">
+    <div class="card-block">
+      <h4 class="card-title"><span class="label label-info">1j</span> Real madrid - Barcelona</h4>
+      <h6 class="card-subtitle mb-2 text-muted glyphicon glyphicon-football-soccer">Football - La liga</h6>
+      <p class="card-text">
+
+  <div class="row text-center">
+    <div class="col-xs-4">
+      <span>1</span>
+      <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>N</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>2</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
+    </div>
+  </div>
+
+
+    </div>
+  </div>
+
+  <div class="card container-paries">
+    <div class="card-block">
+      <h4 class="card-title"><span class="label label-info">3j</span> Chelsea - Arsenal</h4>
+      <h6 class="card-subtitle mb-2 text-muted glyphicon glyphicon-football-soccer">Football - Angl. Premier League</h6>
+      <p class="card-text">
+
+  <div class="row text-center">
+    <div class="col-xs-4">
+      <span>1</span>
+      <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>N</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
+    </div>
+    <div class="col-xs-4">
+       <span>2</span>
+       <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
+    </div>
+  </div>
+
+  
+    </div>
+  </div>
+
 
   </div>
-    <div class="tab-pane fade" id="">
-    <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-  </div>
-</div>
 
 </div>
+
+
 <div class="footer">
    <div id="cd-cart-trigger"><a class="cd-img-replace" href="panier.html">Cart</a></div>
 </div>
