--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
        <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
     </div>
   </div>
+  <br>
+  <div class="text-center">   <a href="details.html">Détails</a></div>
     </div>
   </div>
 
@@ -71,6 +73,8 @@
        <button type="button" class="btn btn-default btn-sm"><strong>1.30</strong></button>
     </div>
   </div>
+    <br>
+  <div class="text-center">   <a href="details.html">Détails</a></div>
     </div>
   </div>
 
@@ -94,6 +98,8 @@
        <button type="button" class="btn btn-default btn-sm"><strong>1.20</strong></button>
     </div>
   </div>
+ <br>
+  <div class="text-center">   <a href="details.html">Détails</a></div>
     </div>
   </div>
 
@@ -123,7 +129,8 @@
        <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
     </div>
   </div>
-
+ <br>
+  <div class="text-center">   <a href="details.html">Détails</a></div>
 
     </div>
   </div>
@@ -148,7 +155,8 @@
        <button type="button" class="btn btn-default btn-sm"><strong>1.50</strong></button>
     </div>
   </div>
-
+   <br>
+  <div class="text-center">   <a href="details.html">Détails</a></div>
   
     </div>
   </div>
