--- a/navbar.html
+++ b/navbar.html
@@ -8,8 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">Bet+</a>
-        <a class="pull-right navbar-brand" href="signup.html">Sign Up</a>
-       <a class="pull-right navbar-brand" href="signin.html">Login</a>
+      <a class="pull-right navbar-brand" href="#">Mon compte</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
