--- a/panier.html
+++ b/panier.html
@@ -78,27 +78,22 @@
 
 
 
-<script
-        src="https://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
 
-<!-- chargement des partials -->
+<script src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
+
 <script>
-    $(function(){
-        $("#header").load("header.html");
-        $("#navbar").load("navbar.html");
-        $("#myCarousel").load("carrousel.html");
-        $("#navbar").load("navbar_session.html");
-
-    });
+  $(function(){
+    $("#header").load("header.html");
+    $("#navbar").load("navbar_session.html");
+    $("#myCarousel").load("carrousel.html");
+  });
 </script>
 
 <!-- Latest compiled and minified JavaScript -->
 
 
-
-<script src="js/main.js"></script>
 </body>
 
 
