--- a/navbar_session.html
+++ b/navbar_session.html
@@ -8,17 +8,18 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="index.html">Bet+</a>
-      <a class="pull-right navbar-brand" href="#">Mon compte</a>
+        <a class="pull-right navbar-brand" href="signup.html">Sign Up</a>
+       <a class="pull-right navbar-brand" href="signin.html">Login</a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
+        <li><a href="panier.html">Consulter Panier</a></li>
         <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Paris<span class="caret"></span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Historique des Paris<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="panier.html">Consulter Panier</a></li>
-          <li><a href="historique.html">Historique des paris</a></li>
-          <li><a href="#">Promotions</a></li>
+          <li><a href="panier.html">Paris en cours</a></li>
+          <li><a href="historique.html">Paris terminés</a></li>
         </ul>
       </li>
        <li class="dropdown">
@@ -28,6 +29,7 @@
           <li><a href="#">Contact</a></li>
           <li><a href="#">Conditions Générales</a></li>
           <li><a href="#">A propos</a></li>
+          <li><a href="#">Promotions</a></li>
         </ul>
       </li>
       </ul>
