--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
 
 
 <div class="footer">
-    <p class="info">FAMILLE, VIE SOCIALE, SANTE FINANCIÈRE. ETES-VOUS PRÊT A TOUT MISER ? <br/> POUR ETRE AIDE, APPELER LE 09-74-75-13-13</p>
-    
+    <p class="info">POUR ETRE AIDE,APPELER LE <br>09-74-75-13-13</p>
+    <br>
    <div id="cd-cart-trigger"><span "pari">1</span><a class="cd-img-replace" href="panier.html">Cart</a></div>
 </div>
 <script src="js/jquery-3.2.1.min.js"></script>
