--- a/navbar_session.html
+++ b/navbar_session.html
@@ -18,8 +18,8 @@
         <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Historique des Paris<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="panier.html">Paris en cours</a></li>
-          <li><a href="historique.html">Paris terminés</a></li>
+          <li><a href="historique.html">Paris en cours</a></li>
+          <li><a href="historique_encours.html">Paris terminés</a></li>
         </ul>
       </li>
        <li class="dropdown">
