--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
     $("#header").load("header.html");
     $("#navbar").load("navbar_session.html");
     $("#myCarousel").load("carrousel.html");
+     $( ".btn.btn-default.btn-sm" ).click(function() {
+  $(location).attr('href', 'panier.html');
+});
   });
 </script>
 
